--- a/android/build.gradle
+++ b/android/build.gradle
@@ -66,4 +66,6 @@ android {
 dependencies {
     compileOnly files('tmplibs\\flutter.jar')
     implementation 'androidx.annotation:annotation:1.1.0'
+    implementation 'com.starmicronics:stario10:1.3.0'
+    implementation 'androidx.core:core-ktx:1.7.0'
 }
