--- a/android/build.gradle
+++ b/android/build.gradle
@@ -23,6 +23,7 @@ allprojects {
 
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 31
@@ -68,4 +69,6 @@ dependencies {
     implementation 'androidx.annotation:annotation:1.1.0'
     implementation 'com.starmicronics:stario10:1.3.0'
     implementation 'androidx.core:core-ktx:1.7.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.1'
 }
