--- a/android/build.gradle
+++ b/android/build.gradle
@@ -72,5 +72,6 @@ dependencies {
     implementation 'com.starmicronics:stario10:1.3.0'
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.1'
 }
